--- a/example.env
+++ b/example.env
@@ -168,6 +168,9 @@ GOTRUE_SMS_TWILIO_MESSAGE_SERVICE_SID=""
 GOTRUE_SMS_TEMPLATE="This is from supabase. Your code is {{ .Code }} ."
 GOTRUE_SMS_MESSAGEBIRD_ACCESS_KEY=""
 GOTRUE_SMS_MESSAGEBIRD_ORIGINATOR=""
+GOTRUE_SMS_SOLAPI_API_KEY=""
+GOTRUE_SMS_SOLAPI_API_SECRET=""
+GOTRUE_SMS_SOLAPI_FROM=""
 GOTRUE_SMS_TEXTLOCAL_API_KEY=""
 GOTRUE_SMS_TEXTLOCAL_SENDER=""
 GOTRUE_SMS_VONAGE_API_KEY=""
